# solv_oxide

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
src/: lib.rs
src/builtin/: mod.rs
src/builtin/movedecider/: hill_climbing.rs  mod.rs
src/builtin/phase/: mod.rs  standard_phase.rs
src/builtin/score/: hard_soft_score.rs  mod.rs
src/builtin/solver/: mod.rs  standard_solver.rs
src/builtin/termination/: mod.rs  time_termination.rs
tests/: knapsack.rs
